--- a/lecture/introduction/intro_python_III.ipynb
+++ b/lecture/introduction/intro_python_III.ipynb
@@ -5,10 +5,12 @@
    "id": "349364f1",
    "metadata": {},
    "source": [
-    "# Introduction VII - Introduction to Python III\n",
+    "# Introduction VI - Introduction to Python III\n",
     "\n",
     "[Michael Ernst](https://github.com/M-earnest)  \n",
-    "Phd student - [Fiebach Lab](http://www.fiebachlab.org/), [Neurocognitive Psychology](https://www.psychologie.uni-frankfurt.de/49868684/Abteilungen) at [Goethe-University Frankfurt](https://www.goethe-university-frankfurt.de/en?locale=en)"
+    "Phd student - [Fiebach Lab](http://www.fiebachlab.org/), [Neurocognitive Psychology](https://www.psychologie.uni-frankfurt.de/49868684/Abteilungen) at [Goethe-University Frankfurt](https://www.goethe-university-frankfurt.de/en?locale=en)\n",
+    "\n",
+    "Adapted by [Aylin Kallmayer](https://aylinkallmayer.com)"
    ]
   },
   {
@@ -23,7 +25,7 @@
     "## Before we get started ...\n",
     "<br>\n",
     "\n",
-    "- most of what you’ll see within this lecture was prepared by Ross Markello, Michael Notter and Peer Herholz and further adapted for this course by Maren Wehrheim and Michael Ernst\n",
+    "- most of what you’ll see within this lecture was prepared by Ross Markello, Michael Notter and Peer Herholz and further adapted for this course by Maren Wehrheim, Michael Ernst, and Aylin Kallmayer\n",
     "- based on Tal Yarkoni's [\"Introduction to Python\" lecture at Neurohackademy 2019](https://neurohackademy.org/course/introduction-to-python-2/)\n",
     "- based on [IPython notebooks from J. R. Johansson](http://github.com/jrjohansson/scientific-python-lectures)\n",
     "- based on http://www.stavros.io/tutorials/python/ & http://www.swaroopch.com/notes/python\n",
@@ -119,7 +121,7 @@
    "source": [
     "# Recap of the last session\n",
     "\n",
-    "Before we dive into new endeavors, it might be important to briefly recap the things we've talked about so far. Specifically, we will do this to evaluate if everyone's roughly on the same page. Thus, if some of the aspects within the recap are either new or fuzzy to you, please have a quick look at the respective part of the [first session](https://peerherholz.github.io/Python_for_Psychologists_Winter2021/introduction/intro_python_I.html) and [second session](https://peerherholz.github.io/Python_for_Psychologists_Winter2021/introduction/intro_python_II.html) again and as usual: ask questions wherever something is not clear.\n",
+    "Before we dive into new endeavors, it might be important to briefly recap the things we've talked about so far. Specifically, we will do this to evaluate if everyone's roughly on the same page. Thus, if some of the aspects within the recap are either new or fuzzy to you, please have a quick look at the respective part of the [first session](https://aylinsgl.github.io/Python_For_Psychologists_23-24/introduction/intro_python_I.html) and [second session](https://aylinsgl.github.io/Python_For_Psychologists_23-24/introduction/intro_python_II.html) again and as usual: ask questions wherever something is not clear.\n",
     "\n",
     "This recap will cover the following topics from the last sessions:\n",
     "\n",
@@ -139,7 +141,7 @@
    "source": [
     "## Variables and data types\n",
     "\n",
-    "###### Exercise 1.1\n",
+    "Exercise 1.1\n",
     "\n",
     "\n",
     "Two session ago we declared several variables. Could you here create a variable for the following:\n",
@@ -222,11 +224,11 @@
    "source": [
     "## strings, lists and dictionaries\n",
     "\n",
-    "###### Exercise 1.3\n",
+    "Exercise 1.3\n",
     "\n",
     "You just did an experiment asking 10 people for a random number between 0 and 100. What `data structure` would you use to store these values using python? \n",
     "\n",
-    "Assume the values were: `1; 50; 23; 77; 91; 3; 34; 81; 55; 49`. How would you define a variable of your selected data type to store these values?"
+    "Assume the values were: `1, 50, 23, 77, 91, 3, 34, 81, 55, 49`. How would you define a variable of your selected data type to store these values?"
    ]
   },
   {
@@ -254,7 +256,7 @@
     }
    },
    "source": [
-    "###### Exercise 1.4\n",
+    "Exercise 1.4\n",
     "\n",
     "From the above random numbers you now want to calculate the mean and test if that mean is higher than 50. How would you do that?"
    ]
@@ -284,7 +286,7 @@
     }
    },
    "source": [
-    "###### Exercise 1.5\n",
+    "Exercise 1.5\n",
     "\n",
     "Define a variable `rand_num_sub_4` that contains the `random number` from the `fourth subject` of your experiment and `print` the statement `'Subject number four picked X as random number'`, where `X` shoudle be replaced using string formatting. Assign the variable using it's index. \n",
     "\n",
@@ -293,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "id": "50198938",
    "metadata": {
     "slideshow": {
@@ -304,7 +306,7 @@
    },
    "outputs": [],
    "source": [
-    "# Please write your solution here"
+    "# Please write your solution here\n"
    ]
   },
   {
@@ -316,7 +318,7 @@
     }
    },
    "source": [
-    "###### Exercise 1.6\n",
+    "Exercise 1.6\n",
     "\n",
     "Oh no you made several mistakes! `Update` your `list` to correct the mistakes.\n",
     "- The `random number` of the `fourth participant` wasn't actually `77` but `76`. \n",
@@ -349,7 +351,7 @@
     }
    },
    "source": [
-    "###### Exercise 1.7\n",
+    "Exercise 1.7\n",
     "\n",
     "Instead of only declaring a `list containing all the random numbers`, you now want to also `assign` a `personal ID` to each `subject` that you asked. In our case this would simply be `Sub_1` to `Sub_10` for the `first`, `second`, etc. `subject`, respectively. \n",
     "\n",
@@ -377,7 +379,7 @@
    "id": "ab085ee5",
    "metadata": {},
    "source": [
-    "###### Exercise 1.8\n",
+    "Exercise 1.8\n",
     "\n",
     "We'll assign the inscription on the ring from lord of the rings as a `string` to a variable called `lord_of_the_rings`. As a reminder, the inscription is: \n",
     "\n",
@@ -411,7 +413,7 @@
     }
    },
    "source": [
-    "###### Exercise 1.9\n",
+    "Exercise 1.9\n",
     "\n",
     "How `long` is this statement now `compared` to before? \n",
     "Further, we want to know what the `indices` `40 to 45` were in the `original inscription` and what they would be in our `new sentence`?"
@@ -442,7 +444,7 @@
     }
    },
    "source": [
-    "###### Exercise 1.10\n",
+    "Exercise 1.10\n",
     "\n",
     "You can `split` a `string` into a `list` of `strings` using `string.split(' ')`. This function `splits` the string given the parameter `' '` (i.e the whitespaces) and generates a `list`. Assign the `split list` to a `new variable`and `print` it.\n",
     "\n",
@@ -618,7 +620,7 @@
     }
    },
    "source": [
-    "One thing you should remember is that a wrong `indentation` raises an `IndentationError`. These can be a lot more impactful than the errors we've encountered before, so we won't adress how to use `try - except` to catch these here."
+    "One thing you should remember is that a wrong `indentation` raises an `IndentationError`. "
    ]
   },
   {
@@ -722,9 +724,7 @@
    "id": "40295f0b",
    "metadata": {},
    "source": [
-    "Note that we're actually asking `if` is `True`. The `True` `boolean` is silent in our `conditionals`.\n",
-    "\n",
-    "GIF?"
+    "Note that we're actually asking `if` is `True`. The `True` `boolean` is silent in our `conditionals`."
    ]
   },
   {
@@ -816,23 +816,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "id": "a5039693",
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "printed if statement1 is False\n",
-      "still inside the elif block\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "statement1 = False \n",
     "\n",
@@ -1010,10 +1001,10 @@
     "\n",
     "Different films cost different amounts of money. Use `if` statements to tests `which films` you can afford and `print` those. The films cost:\n",
     "\n",
-    "- James Bond: 15 EUR\n",
-    "- Spider Man - No Way Home: 11 EUR\n",
-    "- Dune: 6 EUR\n",
-    "- Ghostbusters: 5 EUR\n",
+    "- Napoleon: 15 EUR\n",
+    "- Wish: 11 EUR\n",
+    "- Trolls: 6 EUR\n",
+    "- Wonka: 5 EUR\n",
     "\n",
     "Note: as always in coding, there are several ways to get the right solution. "
    ]
@@ -1033,36 +1024,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d6f79a62",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "subslide"
-    }
-   },
-   "source": [
-    "#### Exercise 2.3\n",
-    "\n",
-    "\n",
-    "It's your lucky day! You happen to find exactly `34 EUR` right in front of your house. You want to celebrate this by inviting as many of your `5 friends` as possible to the cinema. \n",
-    "\n",
-    "How many friends can you invite, while also paying for yourself? First `update` your `money in your wallet`, `test` this using `if` statements and `print` the result. "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 42,
-   "id": "92f56d3d",
-   "metadata": {
-    "solution2": "hidden",
-    "solution2_first": true
-   },
-   "outputs": [],
-   "source": [
-    "### Write your solution here ###\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "ac0447bb",
    "metadata": {
     "slideshow": {
@@ -1070,7 +1031,7 @@
     }
    },
    "source": [
-    "#### Exercise 2.4 - Last one, I promise!\n",
+    "#### Exercise 2.3 - Last one, I promise!\n",
     "\n",
     "\n",
     "This year you want to treat your dog with a christmas present but obviously only if it was a `good boy`. Depending on the `money in your wallet`, you can `either` buy a `new toy` for `10 EUR` or `instead` go on a `nice long walk` `if` you don't have any money. \n",
@@ -1441,7 +1402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "id": "e445907e",
    "metadata": {},
    "outputs": [
@@ -1466,77 +1427,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "483c0c64",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[('parameter1', 'A'),\n",
-       " ('parameter2', 'B'),\n",
-       " ('parameter3', 'C'),\n",
-       " ('parameter4', 'D')]"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "list(params.items())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "id": "6e1318ab",
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "('parameter1', 'A')\n",
-      "('parameter2', 'B')\n",
-      "('parameter3', 'C')\n",
-      "('parameter4', 'D')\n"
+      "parameter1\n",
+      "parameter2\n",
+      "parameter3\n",
+      "parameter4\n"
      ]
     }
    ],
    "source": [
-    "# call the for loop with a variable provided for keys and values\n",
-    "for key in params.items():\n",
+    "for key in params.keys():\n",
     "    print(key)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "68ee8986",
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "parameter1 = \n",
-      "parameter2 = \n",
-      "parameter3 = \n",
-      "parameter4 = \n"
+      "A\n",
+      "B\n",
+      "C\n",
+      "D\n"
      ]
     }
    ],
    "source": [
-    "# call the for loop with a variable provided for keys and values\n",
-    "for key in params.keys():\n",
-    "    print(key + \" = \")"
+    "for value in params.values():\n",
+    "    print(value)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 13,
    "id": "6ba26d0d",
    "metadata": {},
    "outputs": [
@@ -1553,8 +1486,8 @@
    ],
    "source": [
     "# or what you'll usually see\n",
-    "for i, j in params.items():\n",
-    "    print(i + \" = \" + str(j))"
+    "for key, value in params.items():\n",
+    "    print(key + \" = \" + str(value))"
    ]
   },
   {
@@ -1614,11 +1547,7 @@
     "\n",
     "But at times it is necessary to further control how a loop behaves. We'll therefore introduce a few `control statements`\n",
     "\n",
-    "To control the flow of a certain loop we'll use `break`, `continue` and `pass`.\n",
-    "\n",
-    "</br>\n",
-    "\n",
-    "<center><img src=\"https://raw.githubusercontent.com/PeerHerholz/Python_for_Psychologists_Winter2021/master/lecture/static/python_break_continue_pass.png\" width=900></center>\n"
+    "To control the flow of a certain loop we'll use `break`, `continue` and `pass`.\n"
    ]
   },
   {
@@ -1711,7 +1640,7 @@
    "id": "5aae10b8",
    "metadata": {},
    "source": [
-    "Let's see what `continue` and `pass` can actually do. `Continue` implies that we don't want our for loop to end, but rather to skip the rest of `code block` the for the current iteration. So:"
+    "Let's see what `continue` and `pass` can actually do. `Continue` implies that we don't want our for loop to end, but rather to skip the rest of `code block` for the current iteration. So:"
    ]
   },
   {
@@ -1888,7 +1817,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 23,
    "id": "a2d25afa",
    "metadata": {
     "solution2": "hidden",
@@ -1896,7 +1825,7 @@
    },
    "outputs": [],
    "source": [
-    "### Write your solution here ###\n"
+    "### Write your solution here ###"
    ]
   },
   {
@@ -2148,7 +2077,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 26,
    "id": "3d4e25d4",
    "metadata": {
     "solution2": "hidden",
@@ -2156,7 +2085,21 @@
    },
    "outputs": [],
    "source": [
-    "### Write your solution here ###\n"
+    "### Write your solution here"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We will take a break here and continue with while loops next time!"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---"
    ]
   },
   {
@@ -3710,7 +3653,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.11.3"
   }
  },
  "nbformat": 4,
