--- a/lecture/introduction/intro_python_III.ipynb
+++ b/lecture/introduction/intro_python_III.ipynb
@@ -2650,19 +2650,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 1,
    "id": "2832a566",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "4 is maximum\n",
-      "7 is equal to 7\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def get_maximum(a, b):\n",
     "    maximum = None\n",
@@ -2688,7 +2679,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 2,
    "id": "aa8dd108",
    "metadata": {},
    "outputs": [
@@ -3488,7 +3479,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 3,
    "id": "2190e0ae",
    "metadata": {},
    "outputs": [],
@@ -3500,7 +3491,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 4,
    "id": "87eb2512",
    "metadata": {},
    "outputs": [
@@ -3508,14 +3499,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "kwargs: {'name': 'michael', 'number': '017xxx', 'adress': '5G.103', 'e_mail': 'ernst@psych'}\n",
-      "{'name': 'michael', 'number': '017xxx', 'adress': '5G.103', 'e_mail': 'ernst@psych'}\n",
+      "kwargs: {'name': 'aylin', 'number': '017xxx', 'e_mail': 'kallmayer@psych'}\n",
+      "{'name': 'aylin', 'number': '017xxx', 'e_mail': 'kallmayer@psych'}\n",
       "<class 'dict'>\n"
      ]
     }
    ],
    "source": [
-    "kwargs = return_kwargs(name='michael', number='017xxx', adress='5G.103', e_mail='ernst@psych')\n",
+    "kwargs = return_kwargs(name='aylin', number='017xxx', e_mail='kallmayer@psych')\n",
     "print(kwargs)\n",
     "print(type(kwargs))"
    ]
@@ -3607,7 +3598,7 @@
     "\n",
     "Your fifth homework assignment will entail working through a few tasks covering the contents discussed in this session within of a `jupyter notebook`. You can download it [here](https://drive.google.com/file/d/10g9krxq9Y5SNdRpWfkvOMF0j5i3lbxeB/view?usp=share_link). In order to open it, put the `homework assignment notebook` within the folder you stored the `course materials`, start a `jupyter notebook` as during the sessions, navigate to the `homework assignment notebook`, open it and have fun! NB: a substantial part of it will be _optional_ and thus the notebook will look way longer than it actually is.\n",
     "\n",
-    "**Deadline: 15/12/2023, 11:59 PM EST**"
+    "**Deadline: 22/12/2023, 11:59 PM EST**"
    ]
   },
   {
