--- a/lecture/NY_recap.ipynb
+++ b/lecture/NY_recap.ipynb
@@ -25,18 +25,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "it_string = \"this is an example of a string\"\n",
-    "it_string_short = \"string\"\n",
-    "it_list = [1,2,3]\n",
-    "it_dictionary = {\n",
-    "    \"first\": 0,\n",
-    "    \"second\": 1,\n",
-    "    \"third\": 2}\n",
-    "it_tuple = (4,5,6)\n",
+    "it_string = \n",
+    "it_string_short = \n",
+    "it_list = \n",
+    "it_dictionary = \n",
+    "it_tuple = \n",
     "\n",
     "it_list_of_iterables = [it_string, it_string_short, it_list, it_dictionary, it_tuple]"
    ]
@@ -50,57 +47,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "t\n",
-      "h\n",
-      "i\n",
-      "s\n",
-      " \n",
-      "i\n",
-      "s\n",
-      " \n",
-      "a\n",
-      "n\n",
-      " \n",
-      "e\n",
-      "x\n",
-      "a\n",
-      "m\n",
-      "p\n",
-      "l\n",
-      "e\n",
-      " \n",
-      "o\n",
-      "f\n",
-      " \n",
-      "a\n",
-      " \n",
-      "s\n",
-      "t\n",
-      "r\n",
-      "i\n",
-      "n\n",
-      "g\n",
-      "1\n",
-      "2\n",
-      "3\n",
-      "first\n",
-      "second\n",
-      "third\n",
-      "this is an example of a string\n",
-      "string\n",
-      "[1, 2, 3]\n",
-      "{'first': 0, 'second': 1, 'third': 2}\n",
-      "(4, 5, 6)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "for s in it_string: # defining var (s) and iteraterable (it_string)\n",
     "    print(s) # body of the loop: what should happen with each iteration?"
@@ -149,17 +98,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[0.01, 0.02, 0.03, 0.04, 0.05, 0.06, 0.07, 0.08, 0.09]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "it_list = [1,2,3,4,5,6,7,8,9]\n",
     "outcome_list = []\n",
@@ -179,20 +120,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[0.01, 0.02, 0.03, 0.04, 0.05, 0.06, 0.07, 0.08, 0.09]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "it_list = [1,2,3,4,5,6,7,8,9]\n",
-    "outcome_list = [i/100 for i in it_list]\n",
+    "outcome_list = \n",
     "\n",
     "print(outcome_list)"
    ]
@@ -206,19 +139,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[0.01, 0.02, 0.03, 0.04]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "outcome_list = [i/100 for i in it_list if i < 5]\n",
+    "outcome_list = \n",
     "print(outcome_list)"
    ]
   },
@@ -231,19 +156,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[0.01, 0.02, 0.03, 0.04, 500, 600, 700, 800, 900]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "outcome_list = [i/100 if i < 5 else i*100 for i in it_list ]\n",
+    "outcome_list = \n",
     "print(outcome_list)"
    ]
   },
@@ -295,58 +212,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Welcome to the Guess the Secret Number Game! Can you guess the number between 1 and 20?\n",
-      "Too high! Try again.\n",
-      "Too high! Try again.\n",
-      "Too low! Try again.\n",
-      "\n",
-      "Sorry, you've run out of attempts. The secret number was 7. Better luck next time!\n"
-     ]
-    }
-   ],
-   "source": [
-    "import random\n",
-    "\n",
-    "# Set the range for the secret number\n",
-    "lower_limit = 1\n",
-    "upper_limit = 20\n",
-    "\n",
-    "# Generate a random secret number\n",
-    "secret_number = random.randint(lower_limit, upper_limit)\n",
-    "\n",
-    "# Set the maximum number of attempts\n",
-    "max_attempts = 3\n",
-    "\n",
-    "# print some welcome statement that tells the player the lower and upper limits of their guesses as well as the number of guesses available\n",
-    "print(f\"Welcome to the Guess the Secret Number Game! Can you guess the number between {lower_limit} and {upper_limit}?\")\n",
-    "\n",
-    "for attempt in range(1, max_attempts + 1):\n",
-    "    # Get the player's guess\n",
-    "    guess = int(input(f\"\\nAttempt {attempt}/{max_attempts}: Enter your guess: \"))\n",
-    "\n",
-    "    # Provide feedback based on the guess\n",
-    "    if guess == secret_number:\n",
-    "        print(f\"Congratulations! You guessed the correct number ({secret_number}) in {attempt} attempts. You win!\")\n",
-    "        break\n",
-    "    elif guess < secret_number:\n",
-    "        print(\"Too low! Try again.\")\n",
-    "    else:\n",
-    "        print(\"Too high! Try again.\")\n",
-    "\n",
-    "else:\n",
-    "    # This block executes if the for loop completes without a 'break' (player did not guess the number)\n",
-    "    print(f\"\\nSorry, you've run out of attempts. The secret number was {secret_number}. Better luck next time!\")"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -374,32 +239,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 28,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "3.65\n"
-     ]
-    }
-   ],
-   "source": [
-    "import random\n",
-    "import numpy as np\n",
-    "# number of students\n",
-    "num_students = 20 \n",
-    "\n",
-    "# generate grades for each student\n",
-    "grades = [random.randint(1,6) for x in range(num_students)]\n",
-    "\n",
-    "# print average grade\n",
-    "print(np.mean(grades))\n"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -413,27 +252,6 @@
    "outputs": [],
    "source": [
     "# your solution here"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 30,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "2.5384615384615383"
-      ]
-     },
-     "execution_count": 30,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "passed = [x for x in grades if x <= 4]\n",
-    "np.mean(passed)"
    ]
   },
   {
@@ -484,70 +302,6 @@
     "\n",
     "# call the function to mock \"play\" the game "
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 35,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Welcome to the 'Escape the Dungeon' Adventure Game!\n",
-      "There are 3 rooms with challenges in front of you\n",
-      "You enter room 1.\n",
-      "There's a challenge in front of you.\n",
-      "Oops! You failed the challenge. Game Over.\n",
-      "Better luck next time!\n"
-     ]
-    }
-   ],
-   "source": [
-    "import random\n",
-    "\n",
-    "def room_challenge(room_number):\n",
-    "    print(f\"You enter room {room_number}.\")\n",
-    "    print(\"There's a challenge in front of you.\")\n",
-    "\n",
-    "    # Simulate a simple challenge (50% chance of success)\n",
-    "    success = random.choice([True, False])\n",
-    "\n",
-    "    if success:\n",
-    "        print(\"Congratulations! You passed the challenge.\")\n",
-    "        return True\n",
-    "    else:\n",
-    "        print(\"Oops! You failed the challenge. Game Over.\")\n",
-    "        return False\n",
-    "\n",
-    "def escape_dungeon(num_rooms):\n",
-    "    print(\"Welcome to the 'Escape the Dungeon' Adventure Game!\")\n",
-    "\n",
-    "    # Set the number of rooms in the dungeon\n",
-    "    print(f\"There are {num_rooms} rooms with challenges in front of you\")\n",
-    "\n",
-    "    # Loop through each room\n",
-    "    for room in range(1, num_rooms + 1):\n",
-    "        # Call the room_challenge function for each room\n",
-    "        if room_challenge(room):\n",
-    "            print(f\"You successfully cleared Room {room}.\")\n",
-    "        else:\n",
-    "            print(\"Better luck next time!\")\n",
-    "            break\n",
-    "    else:\n",
-    "        # This block executes if the for loop completes without a 'break'\n",
-    "        print(\"Congratulations! You successfully escaped the dungeon!\")\n",
-    "\n",
-    "# Run the game\n",
-    "escape_dungeon(3)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
