--- a/lecture/newanalyses/DataAnalysis.ipynb
+++ b/lecture/newanalyses/DataAnalysis.ipynb
@@ -25,10 +25,7 @@
    "source": [
     "### Loading data file\n",
     "\n",
-    "The file \"data.csv\" contains results from a participant who participated in the gaze cue experiment you programmed today! See image below for a reminder of the trial sequence:\n",
-    "\n",
-    "![alt text](trialseq.png)\n",
-    "\n",
+    "The file \"data.csv\" contains results from a participant who participated in the gaze cue experiment you programmed today! \n",
     "using `.read_csv` we can read in our data file and store it under `df`."
    ]
   },
